--- a/main.css
+++ b/main.css
@@ -108,7 +108,7 @@ li {
 }
 
 /* The container <div> - needed to position the dropdown content */
-.dropdownOne {
+.dropdown {
   position: relative;
   display: inline-block;
   float: right;
