--- a/main.css
+++ b/main.css
@@ -149,7 +149,7 @@ li {
 
 .slider {
   -webkit-appearance: none;
-  width: 50%;
+  width: 25%;
   height: 15px;
   border-radius: 5px;
   background: #d3d3d3;
@@ -157,6 +157,7 @@ li {
   opacity: 0.7;
   -webkit-transition: 0.2s;
   transition: opacity 0.2s;
+  float: right;
 }
 
 .slider::-webkit-slider-thumb {
