Nav bar updated

--- a/main.css
+++ b/main.css
@@ -72,14 +72,14 @@ li {
 
 /* Add a black background color to the top navigation */
 .topnav {
-  background-color: #bdb76b;
+  background-color: white;
   overflow: hidden;
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
   float: left;
-  color: #f2f2f2;
+  color: black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -88,7 +88,7 @@ li {
 
 /* Change the color of links on hover */
 .topnav a:hover {
-  background-color: #ddd;
+  background-color: grey;
   color: black;
 }
 
@@ -176,4 +176,8 @@ li {
   border-radius: 50%;
   background: #04aa6d;
   cursor: pointer;
+}
+
+body{
+  background-color: #8FBC8F;
 }
