--- a/main.css
+++ b/main.css
@@ -1,76 +1,4 @@
-﻿body {
-  font-family: monospace;
-  background: var(--bg);
-}
-
-ul {
-  font-family: helvetica;
-}
-li {
-  list-style: circle;
-}
-
-.list {
-  list-style: square;
-}
-
-#msg {
-  font-family: monospace;
-}
-
-.light-theme {
-  color: #ffffff;
-  background: #000000;
-}
-
-.dark-theme {
-  color: #000000;
-  background: #00ff00;
-}
-:root {
-  --green: #00ff00;
-  --white: #ffffff;
-  --black: #000000;
-}
-
-.light-theme {
-  --bg: var(--green);
-  --fontColor: var(--black);
-  --btnBg: var(--black);
-  --btnFontColor: var(--white);
-}
-.dark-theme {
-  --bg: var(--black);
-  --fontColor: var(--green);
-  --btnBg: var(--white);
-  --btnFontColor: var(--black);
-}
-* {
-  color: var(--fontColor);
-  font-family: helvetica;
-}
-
-.btn {
-  color: var(--btnFontColor);
-  background-color: var(--btnBg);
-}
-
-.btn {
-  position: absolute;
-  top: 20px;
-  left: 250px;
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-  border: none;
-  color: var(--btnFontColor);
-  background-color: var(--btnBg);
-}
-.btn:focus {
-  outline-style: none;
-}
-
-/* Add a black background color to the top navigation */
+﻿/* Add a black background color to the top navigation */
 .topnav {
   background-color: white;
   overflow: hidden;
@@ -180,4 +108,12 @@ li {
 
 body{
   background-color: #8FBC8F;
+}
+
+
+img {
+  width: 100px;
+  border-radius: 50px;
+  float: left;
+  margin-right: 50px;
 }
