--- a/main.css
+++ b/main.css
@@ -86,3 +86,13 @@ img {
   float: left;
   margin-right: 50px;
 }
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: white;
+  color: black;
+  text-align: center;
+}
