--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
   overflow: hidden;
 }
 
+
 /* Style the links inside the navigation bar */
 .topnav a {
   float: left;
@@ -95,4 +96,22 @@ img {
   background-color: white;
   color: black;
   text-align: center;
+}
+.cliff{
+  width: 100px;
+  border-radius: 50px;
+  float: left;
+  margin-right: 50px;
+}
+.belfast{
+  width: 100px;
+  border-radius: 50px;
+  float: left;
+  margin-right: 50px;
+}
+.bitofboth{
+  width: 100px;
+  border-radius: 50px;
+  float: left;
+  margin-right: 50px;
 }
