--- a/css/staystyles.css
+++ b/css/staystyles.css
@@ -1,3 +1,29 @@
-container mt-5 {
+.col-sm-4 {
 background-color: white;
+color: black;
 }
+
+h3 {
+    text-align: center;
+}
+.cliff2{
+    width: 400px; 
+    height: 300px;
+    /* border-radius: 50px; */
+    float: center;
+    /* margin-right: 50px; */
+  }
+  .belfast2{
+    width: 400px;
+    height: 300px;
+    /* border-radius: 50px; */
+    float: center;
+    /* margin-right: 50px; */
+  }
+  .bitofboth2{
+    width: 400px;
+    height: 300px;
+    /* border-radius: 50px; */
+    float: center;
+    /* margin-right: 50px; */
+  }
