--- a/main.css
+++ b/main.css
@@ -81,12 +81,21 @@ body{
   background-color: #8FBC8F;
 }
 
-img {
+/* img {
   width: 100px;
   border-radius: 50px;
   float: left;
   margin-right: 50px;
-}
+} */ 
+
+/* .col-sm-12{
+  width: 100%;
+  height: 400px;
+  background-image: url('belfast.jpg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  border: 1px solid red;
+} */
 
 .footer {
   position: fixed;
@@ -97,7 +106,7 @@ img {
   color: black;
   text-align: center;
 }
-.cliff{
+/* .cliff{
   width: 100px;
   border-radius: 50px;
   float: left;
@@ -114,4 +123,4 @@ img {
   border-radius: 50px;
   float: left;
   margin-right: 50px;
-}
+} */
