--- a/css/findyourstay.css
+++ b/css/findyourstay.css
@@ -1,9 +1,9 @@
-.example{
-    color: pink;
+.noOfPeopleCSS{
+    color: blue;
     padding: 30px;
 }
 .priceCSS{
-    color: aqua;
+    color: blue;
     padding: 30px;
 }
 .checkInDateCSS{
