--- a/css/findyourstay.css
+++ b/css/findyourstay.css
@@ -98,4 +98,43 @@
 
 .hol-btn:hover{
     background-image: var(--gradient-color-alt);
-}
+} 
+
+/*The Modal*/
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+  }
+  
+  /* Modal Content*/
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    text-align: center;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+  }
+  
+  /*Close Button*/
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
