--- a/css/featuredstays.css
+++ b/css/featuredstays.css
@@ -1,3 +1,22 @@
 .h1{
+    padding: 10px; 
+}
+
+.row-tile{
+    align-items: center;
+    text-align: right;
+    width: 100%;
+    max-width: 120rem;
+    padding: 0 1.5rem;
+    margin: 0 auto;
+}
+
+.tile-body {
+    text-align: right; 
+    margin-top: -50px;
+}
+
+.tile-img{
     padding: 10px;
+    margin-left: 20px;
 }
