--- a/css/findyourstay.css
+++ b/css/findyourstay.css
@@ -14,6 +14,15 @@
     --gradient-color-alt: linear-gradient(to right, var(--green-light), var(--yellow-solid));
   }
 
+.page-head{
+    margin-top: 120px;
+    margin-bottom: -50px;
+    text-align: center; 
+    /* padding: 10px; */
+    /* margin-top: 30px; */
+    /* padding: 10px; */
+}
+
 .row{
     padding: 75px;
 }
@@ -49,6 +58,7 @@
 
 .find-your-stay-container {
     margin: 100px 20px;
+    /* align-items: center; */
 }
 .destinationCSS{
     color: blue;
@@ -69,11 +79,12 @@
 .hol-listing{
     width: 100%;
     max-width: 120rem;
-    padding: 0 1.5rem;
-    margin: 0 auto; 
+    /* padding: 0 1.5rem; */
+    /* margin: 0 auto;  */
+    margin: 100px 20px;
     align-items: center;
     text-align: center;
-    background-color:chocolate; /*this was just a test colour to see if it worked*/
+    background-color:var(--green-transparent); /*this was just a test colour to see if it worked*/
 }
 
 .listingImage{
