--- a/css/images.css
+++ b/css/images.css
@@ -19,3 +19,45 @@
     float: center;
     margin-right: 50px;
   }
+  .donegal{
+    width: 300px;
+    height: 200px;
+    /* border-radius: 50px; */
+    float: center;
+    margin-right: 50px;
+  }
+  .cork{
+    width: 300px;
+    height: 200px;
+    /* border-radius: 50px; */
+    float: center;
+    margin-right: 50px;
+  }
+  .cavan{
+    width: 300px;
+    height: 200px;
+    /* border-radius: 50px; */
+    float: center;
+    margin-right: 50px;
+  }
+  .waterford{
+    width: 300px;
+    height: 200px;
+    /* border-radius: 50px; */
+    float: center;
+    margin-right: 50px;
+  }
+  .portrush{
+    width: 300px;
+    height: 200px;
+    /* border-radius: 50px; */
+    float: center;
+    margin-right: 50px;
+  }
+  .limerick{
+    width: 300px;
+    height: 200px;
+    /* border-radius: 50px; */
+    float: center;
+    margin-right: 50px;
+  }
