--- a/css/staystyles.css
+++ b/css/staystyles.css
@@ -5,28 +5,38 @@ color: black;
 
 h3 {
     text-align: center;
+    size: 1.5rem;
+    font-size: large;
+    font-weight: bold;
 }
 .cliff2{
     width: 400px; 
-    height: 300px;
+    height: 275px;
+    padding: 10px;
     /* border-radius: 50px; */
     float: center;
     /* margin-right: 50px; */
   }
   .belfast2{
     width: 400px;
-    height: 300px;
+    height: 275px;
+    padding: 10px;
     /* border-radius: 50px; */
     float: center;
     /* margin-right: 50px; */
   }
   .bitofboth2{
     width: 400px;
-    height: 300px;
+    height: 275px;
+    padding: 10px;
     /* border-radius: 50px; */
     float: center;
     /* margin-right: 50px; */
   }
   .container mt-5 {
     padding: 50px;
+  }
+  p{
+    font-size: medium;
+    font-style: oblique;
   }
