--- a/css/featuredstays.css
+++ b/css/featuredstays.css
@@ -22,6 +22,161 @@
     margin-left: 20px;
     margin-top: 10px;
 }
+
+/*The Modal*/
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+  }
+  
+  /* Modal Content*/
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    text-align: center;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+  }
+  
+  /*Close Button*/
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+
+  .modal2 {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+  }
+  
+  /* Modal Content*/
+  .modal-content2 {
+    background-color: #fefefe;
+    margin: 15% auto;
+    text-align: center;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+  }
+  
+  /*Close Button*/
+  .close2 {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close2:hover,
+  .close2:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .modal3 {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+  }
+  
+  /* Modal Content*/
+  .modal-content3 {
+    background-color: #fefefe;
+    margin: 15% auto;
+    text-align: center;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+  }
+  
+  /*Close Button*/
+  .close3 {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close3:hover,
+  .close3:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .modal4 {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+  }
+  
+  /* Modal Content*/
+  .modal-content4 {
+    background-color: #fefefe;
+    margin: 15% auto;
+    text-align: center;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+  }
+  
+  /*Close Button*/
+  .close4 {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close4:hover,
+  .close4:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
 footer{
     padding: 10px;
 }
