--- a/css/findyourstay.css
+++ b/css/findyourstay.css
@@ -157,3 +157,13 @@
     text-decoration: none;
     cursor: pointer;
   }
+
+  .datesTextStyle {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.9rem;
+    color:var(--dark-color);
+    margin: 0;
+    text-align: center;
+    font-style: bolder;
+
+  }
